<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d2w_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 Operation of the D2W omnidirectional mobile platform prototype</description>
  <maintainer email="victorbarroscoch@gmail.com">Victor Coch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>rviz_imu_plugin</depend>
  <depend>urdf</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_bridge</depend>  
  <depend>teleop_twist_keyboard</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
